# ETHCC2024

./: readme.md
backend/: pyproject.toml  readme.md
backend/src/backend/: db.py  logs.py  main.py  models.py  my_types.py
contracts/: launchpad.sol  token.sol
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  fonts.css  index.css  index.js
frontend/src/Components/Layout/: FeedbackErrorSnackbar.jsx  FeedbackSuccessSnackbar.jsx  HeaderComponent.jsx  Layout.jsx  styles.css
frontend/src/Components/MainPage/: CoinCard.jsx  CoinsCardsGrid.jsx  CreateNewCoinButton.jsx  CreateNewCoinForm.jsx  CreateNewCoinModal.jsx  styles.css
frontend/src/Components/SingleCoinPage/: TokenBuySellCard.jsx  styles.css
frontend/src/Config/: routes.js
frontend/src/DataMockUpsTestingPurposesOnly/: coinsList.js
frontend/src/Pages/: MainPage.jsx  SingleCoinPage.jsx  index.js
frontend/src/providers/: FeedbackProvider.js  Web3Provider.js
frontend/src/web3/: launchpad.js
liquidator/: pyproject.toml  readme.md
liquidator/src/liquidator/: main.py
