[tool.poetry]
name = "liquidator"
version = "0.1.0"
description = ""
authors = ["git-alice <art.oxbow@gmail.com>"]
packages = [{include = "liquidator", from="src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
